# rust-breakout

./: Cargo.toml  README.md
src/: asset_manager.rs  breakout.rs  collidable.rs  constants.rs  fs.shader  game_error.rs  lib.rs  main.rs  types.rs  vs.shader  vs2.shader
src/components/: ball.rs  block.rs  hitbox.rs  is_collidable.rs  mod.rs  paddle.rs  sprite_render.rs  transform.rs
src/resources/: input_state.rs  mod.rs
src/systems/: ball.rs  input.rs  limiter.rs  mod.rs  paddle.rs  render.rs
