[package]
name = "breakout-clone"
version = "0.1.0"
authors = ["Nikolai Brendler <nbrendler@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
luminance = "0.38"
luminance-derive = "0.5"
luminance-glfw = "0.12"
luminance-windowing = "0.8"
image = "0.22"
cgmath = { version="0.17", features=["swizzle"] }
specs = { version="0.15",  features=["nightly"] }
